<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        android:id="@+id/card_trick_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/card_trick_button_open"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/card_placeholder_title"
        android:textAppearance="?attr/textAppearanceHeadline6" />

    <TextView
        android:id="@+id/card_trick_subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/card_trick_button_open"
        app:layout_constraintTop_toBottomOf="@id/card_trick_title"
        android:text="@string/card_placeholder_subtitle"
        android:textAppearance="?attr/textAppearanceBody1"
        android:textColor="?android:attr/textColorSecondary"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/card_trick_button_open"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/card_placeholder_open"
        app:icon="@drawable/ic_fluent_open_24_filled" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/card_trick_divider"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/card_trick_subtitle"/>

    <TextView
        android:id="@+id/card_trick_content"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/card_trick_divider"
        android:layout_margin="8dp"
        android:text="@string/card_placeholder_content"
        android:textAppearance="?attr/textAppearanceBody2"
        android:textColor="?android:attr/textColorSecondary"/>

    <include layout="@layout/layout_gallery"
        android:id="@+id/card_trick_gallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/card_trick_content" />

    <com.google.android.material.chip.ChipGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/card_trick_gallery"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.chip.Chip
            android:id="@+id/card_trick_button_delete"
            style="@style/input_chip"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chip_delete"
            app:chipIcon="@drawable/ic_fluent_delete_24_regular"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/card_trick_button_clip"
            style="@style/input_chip"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chip_copy_address"
            app:chipIcon="@drawable/ic_fluent_copy_24_regular"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/card_trick_button_travel"
            style="@style/input_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="@string/chip_travel_info"
            app:chipIcon="@drawable/ic_fluent_airplane_24_regular"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/card_trick_button_launch"
            style="@style/input_chip"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chip_open_maps"
            app:chipIcon="@drawable/ic_fluent_map_24_regular"/>

    </com.google.android.material.chip.ChipGroup>

</androidx.constraintlayout.widget.ConstraintLayout>
